new changes map

--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
         <link rel="stylesheet" href="css/kitchen-sink.css">
         <link rel="stylesheet" href="css/orthoplan-app.css">
         <link rel="icon" href="img/icon.png">
+
     </head>
     <body>
         <div class="statusbar-overlay"></div>
@@ -52,6 +53,28 @@
                                             </div>
                                         </a>
                                     </li>
+                                    <li>
+                                        <a href="offices.html" class="item-link close-panel">
+                                            <div class="item-content">
+                                                <div class="item-media"><i class="fa fa-ticket"></i></div>
+                                                <div class="item-inner">
+                                                    <div class="item-title">Oficinas</div>
+                                                </div>
+                                            </div>
+                                        </a>
+                                    </li>
+                                    <li>
+                                        <a href="#" onclick="close_session();" class="item-link close-panel">
+                                            <div class="item-content">
+                                                <div class="item-media"><i class="fa fa-ticket"></i></div>
+                                                <div class="item-inner">
+                                                    <div class="item-title ">Cerrar Sesión</div>
+                                                </div>
+                                            </div>
+                                        </a>
+                                    </li>
+
+
 
                                 </ul>
                             </div>
@@ -115,6 +138,7 @@
         <script type="text/javascript" src="js/framework7.js"></script>
         <script type="text/javascript" src="js/jquery.js"></script>
         <script type="text/javascript" src="js/kitchen-sink.js"></script>
-      
+        <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBEmJb07d2cqBvO5UmRjVU6WC4rQDz-kVo"></script>
+
     </body>
 </html>
