--- a/www/index.html
+++ b/www/index.html
@@ -145,11 +145,11 @@
                 </div>
             </div>
         </div>
-                 <script type="text/javascript" src="cordova.js"></script>  
+           <!--      <script type="text/javascript" src="cordova.js"></script>-->  
         <script type="text/javascript" src="js/framework7.js"></script>
         <script type="text/javascript" src="js/jquery.js"></script>
         <script type="text/javascript" src="js/kitchen-sink.js"></script>
-        <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBEmJb07d2cqBvO5UmRjVU6WC4rQDz-kVo"></script>
+       
 
     </body>
 </html>
