--- a/www/login.html
+++ b/www/login.html
@@ -20,7 +20,7 @@
                     <div class="item-content">
                         <div class="item-inner">
                             <div class="item-input item-input-field item-input-field-login-container">
-                                <input type="email" placeholder="Contraseña" class="item-input-field-login" id="password">
+                                <input type="text" placeholder="Contraseña" class="item-input-field-login" id="password">
                             </div>
                         </div>
                     </div>
